hijackin window to style popup